# airflow-datawarehouse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.yml  pyproject.toml  pytest.ini  requirements.txt
.astro/: config.yaml
.github/workflows/: block-direct-commits.yml  ci.yml
dags/CoinGecko/: CoinGecko_CoinsList.py
include/: __init__.py
include/extractors/: __init__.py  api_base.py
include/extractors/api/: CoinGecko.py  __init__.py
include/utils/: __init__.py  aws_tools.py  azure_tools.py  file_tools.py  log_tools.py
tests/: test_fail.py
tests/dags/: test_dags.py
tests/include/extractors/api/: test_CoinGecko.py
tests/include/utils/: test_aws_tools.py  test_azure_tools.py  test_file_tools.py
