[project]
name = "airflow-datawarehouse"
version = "0.1.0"
description = ""
authors = [
    {name = "Greg Oliveira",email = "gregoryomelo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.0,<3.12.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
commitizen = "^4.1.1"
black = "^25.1.0"
isort = "^6.0.0"
autopep8 = "^2.3.2"
pydocstyle = "^6.3.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.12.12"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
